@@ -69,6 +69,7 @@
     <Compile Include="AI\WorkplaceAI.cs" />
     <Compile Include="Debugging.cs" />
     <Compile Include="Patches\CalculateHomeCount.cs" />
+    <Compile Include="Patches\BuildingLoaded.cs" />
     <Compile Include="Translations.cs" />
     <Compile Include="ConvertPrefabs.cs" />
     <Compile Include="GUI\BuildingPreview.cs" />
