@@ -396,7 +396,9 @@ namespace PloppableRICO
                     // Check and adjust for any rounding errors, assigning 'leftover' jobs to the lowest education level.
                     _workplaces[0] += (originalWorkplaces - _workplaces.Sum());
 
-                    Debug.Log("RICO Revisited: " + originalWorkplaces + " old-format workplaces for building '" + name + "'; replacing with workplaces " + _workplaces[0] + " " + _workplaces[1] + " " + _workplaces[2] + " " + _workplaces[3] + ".");
+                    // Commenting out for now - possibily no longer needed.
+                    // TODO: review and delete if appropriate.
+                    // Debug.Log("RICO Revisited: " + originalWorkplaces + " old-format workplaces for building '" + name + "'; replacing with workplaces " + _workplaces[0] + " " + _workplaces[1] + " " + _workplaces[2] + " " + _workplaces[3] + ".");
 
                     // Reset flag; these workplaces are now updated.
                     _oldWorkplacesStyle = false;
@@ -616,11 +618,11 @@ namespace PloppableRICO
                     if (newLevel == 1)
                     {
                         // Don't bother reporting errors for levels reset to 1, as those are generally for buildings that only have one level anwyay and it's just annoying users.
-                        Debug.Log("RICO Revisited: building '" + name + "' has invalid level '" + level.ToString() + "'.Resetting to level '" + newLevel + "'.");
+                        Debug.Log("RICO Revisited: building '" + name + "' has invalid level '" + level.ToString() + "'. Resetting to level '" + newLevel + "'.");
                     }
                     else
                     {
-                        errors.AppendLine("Building '" + name + "' has invalid level '" + level.ToString() + "'.  Resetting to level '" + newLevel + "'.");
+                        errors.AppendLine("Building '" + name + "' has invalid level '" + level.ToString() + "'. Resetting to level '" + newLevel + "'.");
                     }
                     level = newLevel;
                 }
