@@ -1,5 +1,8 @@
-﻿- Suppress errors for buildings that are deactivated
+﻿- Add override for building levels on game load (only applies to buildings in LocalRICOSettings.xml)
+- Suppress errors for buildings that are deactivated
 - Tweak options panel level menu update on service and subservice changes
+- Logging tweaks
+
 
 Version 1.2.5
 
